# ATCOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GameConfiguration.toml  run-tidy.sh
lib/: CMakeLists.txt
lib/core/: aircraft.cpp  aircraft.hpp  radar.cpp
src/: CMakeLists.txt  atcos.cpp  atcos.hpp  main.cpp
src/game/: CMakeLists.txt  atcos.cpp  atcos.hpp  main.cpp
src/game/graphics/: AircraftShape.cpp  AircraftShape.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Event.hpp  EventDispatcher.hpp  RadarControl.cpp  RadarControl.hpp  RenderEngine.cpp  RenderEngine.hpp  aircraftShape.cpp  aircraftShape.hpp  renderer.cpp  renderer.hpp
src/lib/: CMakeLists.txt
src/lib/core/: aircraft.cpp  aircraft.hpp  core.hpp  radar.cpp  radar.hpp
src/utils/: config.cpp  config.hpp  log.cpp  log.hpp  timer.hpp
tests/: CMakeLists.txt
tests/lib/core/: aircraft.test.cpp
